# cephfs-disk-usage

./: .flake8  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: docker.yaml  wipac-cicd.yml
cephfs_disk_usage/: server.py
cephfs_disk_usage/static/: style.css
cephfs_disk_usage/templates/: base.html  details.html  main.html  piechart.html  piechart.js  table.html
