[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.7"
dependencies = ["wipac-rest-tools"]
name = "cephfs-disk-usage"
requires-python = ">=3.11, <3.14"

[project.optional-dependencies]
tests = ["flake8", "pytest", "pytest-asyncio", "pytest-mock"]

[tool.pytest.ini_options]
async = "auto"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["cephfs_disk_usage/__init__.py:__version__"]
commit_parser = "emoji"
build_command = "pip install build && python -m build"

[tool.semantic_release.commit_parser_options]
major_tags = ["[major]"]
minor_tags = ["[minor]", "[feature]"]
patch_tags = ["[patch]", "[fix]", " ", "!", "#", "$", "%", "&", "'", "(", ")", "*", "+", "-", ".", "/", "0", "1", "2", "3", "4", "5", "6", "7", "8", "9", ":", ";", "<", "=", ">", "?", "@", "A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z", "[", "]", "^", "_", "`", "a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", "q", "r", "s", "t", "u", "v", "w", "x", "y", "z", "{", "|", "}", "~"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.setuptools.packages.find]
namespaces = false
exclude = ["test", "tests", "doc", "docs", "resource", "resources", "example", "examples"]
